--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -87,7 +87,7 @@
 </div>
     <!-- para que funcionen las acciones de next y previos del carrusel-->
     <script src="/js/carousel.js"></script>
-    <script src="/js/header.js"></script>
+  <!--   <script src="/js/header.js"></script> -->
     
 </header>
 
