--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -31,7 +31,7 @@
                                <!--  <p class="feedback is error">Un error</p>-->
                                <% if (locals.errors && errors.first_name) { %>
                                 <p class="feedback is-danger"><%= errors.first_name.msg %></p>
-                            <% } %>
+                                <% } %>
                             </div>
 
                             <div class="field">
@@ -91,7 +91,7 @@
                                 <div class="field">
                                     <label for="category">Categoría</label>
                                     <div class="control">
-                                        <select name="category_id" id="category_id" required>
+                                        <select name="category_id" id="category_id">
                                             <option value="">Seleccione una opción</option>
                                             <option value="1">Administrador</option>
                                             <option value="2">Viajero</option>
@@ -123,7 +123,7 @@
 </footer>
 
 <script src="/js/form.js"></script>
-<script src="../js/details.js"></script>
+<!-- <script src="../js/details.js"></script> -->
 
 </body>
 </html>
