--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -26,7 +26,7 @@
                                         <p class="feedback is-danger"><%= errors.email.msg %></p>
                                     <% } %>
                                     <!-- Errores front -->
-                                    <div class= "errorEmail errorMensaje"></div>
+                                    <div class= "errorEmail errorMessage"></div>
                             </div>
 
                             <div>
@@ -38,7 +38,7 @@
                                         <p class="feedback is-danger"><%= errors.password.msg %></p>
                                     <% } %>
 
-                                    <div class= "errorPassword errorMensaje"></div>
+                                    <div class= "errorPassword errorMessage"></div>
                             </div>
 
                             <div class="user-type">
@@ -82,11 +82,11 @@
                         <p><input type="submit" value="No tenes cuenta? Registrate acá!"></p>
                     </form> 
                     <!-- END REGISTER -->
-                    <script src="../js/user-log.js"></script>
+                   
         <footer>
             <%- include('../partials/footer.ejs') %>
         </footer>
-       
-        <!--  <script src="../js/details.js"></script>  -->
+        <script src="/js/user-log.js"></script>
+        <script src="../js/details.js"></script> 
     </body>
 </html>
