--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -14,7 +14,7 @@
                 <div class="login">
                     <h1 id="header">Ingresá con tu email y contraseña</h1>
                         <!-- LOGIN FORM -->
-                        <form class="form-login" id="form-login" action="/login" method="POST">
+                        <form class="form-login" id="login-form" action="/login" method="POST">
         
                             <div>
                                 <label for="email"><i class="fas fa-user "></i> Email</label>
