--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -45,7 +45,7 @@
       <section> 
         <h1 class="main-title">Estas pueden ser tus proximas aventuras:</h1>
         
-        <div class="container" >  <!-- containerun poco mas grande , container1 medio, conteiner 2 izquierda -->
+        <div class="container" >  
           
             <%products.forEach(product => { %>
               <div class ="producto" >
@@ -58,6 +58,7 @@
                           <h3 class="content-title"><%= product.description%></h3>
                           <p class="content-text"> ARS $: <%= product.price%> p/p</p>
                           <a href="/lista/<%= product.id%>" style="color: blanchedalmond;">VER DETALLE</a>
+                          
                           </div>
                         </a>
                       </div>
@@ -67,44 +68,13 @@
         </div>
       </section>
 
-
-
-        <!--  
-                <div class="container">
-                <%products.forEach(product => { %>
-                    <div class="paquete-columna">
-                        <div class="paquete-item">
-                            <div class="paquete-fila">
-                                <div class="paquete-pic" >
-                                  <a href="/lista/<%= product.id%>"><img src="images/destinos/<%=product.image%>" alt="picture"></a>
-
-                                </div>
-                            </div>
-                            <div class="paquete-fila" style="font-size: 40px">
-                                <h4><%= product.title%></h4>
-                                <p><%= product.description%></p>
-                                <p>ARS $: <%= product.price%></p>
-                                <button class= btn sm btn-pink-outline>
-                                    <a href="/lista/<%= product.id%>">VER DETALLE</a>
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                    <hr>
-                    <br>
-                    <% }) %>
-            </div>
-            
-            </div>
-        </section>-->
-
       <br>
+      <hr>
 
       <section class="partners" > 
         <div class="partners">
           <h1 class="main-title" >Trabajan con nosotros:</h1>
-
-          <div class="container2">
+          <div class="box-partner">
               <h3 class="title">LATAM</h3>
                 <div class="content">
                   <a href="https://www.latam.com/es_ar/" target="_blank">
@@ -118,7 +88,7 @@
                </div>
           </div>
 
-         <div class="container2">
+         <div class="box-partner">
             <h3 class="title">HOSTELWORLD</h3>
               <div class="content">
                <a href="https://www.hostelworld.com/" target="_blank">
@@ -131,7 +101,7 @@
                   </a>
               </div>
           </div>
-          <div class="container2">
+          <div class="box-partner">
             <h3 class="title">Assist Card</h3>
               <div class="content">
                <a href="https://www.assistcard.com/ar" target="_blank">
