--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -2,7 +2,7 @@
     <div class="container header-container">
       <div class="header-left">
         
-          <a href="/"><img src="/images/gif.gif" alt="logo" style="width:auto "></a> 
+          <a href="/"><img src="/images/gif.gif" alt="logo" style="width:15rem; box-shadow: 5px 0px 0px grey; "></a> 
         
       </div>
       <div class="top">
