--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/log.css">
     <link rel="stylesheet" href="/css/products.css">
+    <link rel="stylesheet" href="/css/partners.css">
     
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
