--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -32,6 +32,21 @@
             <a href="/logout" class="close-button" id="#logoutUser"> Cerra sesión</a>
             </div>
                 
+      <!-- BARRA DE BUSQUEDA-->
+      <!-- DEBERIA LLEVAR A LA LISTA o buscar el id de lo q se pide?-->
+      <div class="buscador">
+      <form action="" method="get">
+        <i class="fas fa-search"></i><input type="text" id="busqueda" name="search" placeholder="Buscar producto"/>
+        <button class= btn sm btn-pink-outline>
+          <a href="/">Buscar</a>
+      </button>
+     <!--    <input type="submit" value="Buscar"/> -->
+           </form>
+      </div>
+
+
+
+
                 <br>
                 
             <!-- </ul> -->
