--- a/src/views/products/carrito.ejs
+++ b/src/views/products/carrito.ejs
@@ -29,14 +29,15 @@
             <div class= "resumen">
             <h2 style="font-size: 40px;"> Resumen de tus reservas</h2>
                 <div class ="detail">
-                    <p>
+                    
+                  <!--  ACÁ SOLO DEBE TRAER EL ID  <p>
                      <ul style="text-align: left">
                         <li> <a href ="#"> Item 1 </a><p>Descripción</p></li>
                         <li> <a href ="#"> Item 2 </a><p>Descripción</p></li>
                         <li> <a href ="#"> Item 3 </a><p>Descripción</p></li>
                         <li> <a href ="#"> Item 4 </a><p>Descripción</p></li>
                      </ul>
-                    </p>
+                    </p> -->
                 </div>
         <div class ="boton-borrar" style="font-size: 35px; text-align: center;"><input type="submit" value="Vaciar carrito"></div>
             <br>
