--- a/src/views/products/detail.ejs
+++ b/src/views/products/detail.ejs
@@ -56,8 +56,8 @@
                 <a href="/carrito">Ir al carrito</a>
             </button>
             <hr>
-            <div class ="confirmar"><input type="submit" value="RESERVA YA!"></div>
-        </div> <p>ir al carrito es un link, el boton es un type submit</p>
+<!--             <div class ="confirmar"><input type="submit" value="RESERVA YA!"></div>
+ -->        </div> <!-- <p>ir al carrito es un link, el boton es un type submit</p> -->
         <br>
     </div>   
     </div> 
