--- a/public/css/index.css
+++ b/public/css/index.css
@@ -11,8 +11,14 @@ body {
 .container {
     max-width: 1200px;
     margin: 0 auto;
+   /*  display:flex; */
 }
 
+
+/* .producto{
+    display: flex;
+    width: 100%;
+} */
 a {
     color: black;
     text-decoration: none;
@@ -21,13 +27,13 @@ a {
 h2{
     text-align: center;
 }
-.contendor {
+/* .contendor {
     width: 100%;
     max-width: 1200px;
     margin: auto;
     
    
-}
+} */
 
 .header {
     font-size: 20px;
