--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -23,7 +23,7 @@
       <h2> Turisteando es la pagina que estabas buscando para empezar tus vacaciones por Argentina </h2>
       <br>
       <div class="pic-container1"> 
-      <!-- JS FRONTTTTTTTTT ------------->     
+      <!-- JS FRONTTTTTTTTT---->     
       </div>
 
       <section>
@@ -33,28 +33,27 @@
          <hr>
       </section>
 
+
       <section> 
-        <h1 class="main-title">Estas pueden ser tus proximas aventuras:</h1>
-        
+        <h1 class="main-title">Estas pueden ser tus proximas aventuras:</h1>  
         <div class="container" >  <!-- containerun poco mas grande , container1 medio, conteiner 2 izquierda -->
-          
             <%products.forEach(product => { %>
               <div class ="producto" >
                 <h1 class="title"><%= product.title%></h1>
-                    <div class="content">
+                  <div class="content">
                         <a href="/lista/<%= product.id%>" target="_blank">
                         <div class="content-overlay"> PUEDE IR OTRO TEXTO</div>
-                        <img class="content-image" src="images/destinos/<%=product.image%>">
+                        <div><img class="content-image" src="images/destinos/<%=product.image%>"></div>
                         <div class="content-details fadeIn-bottom"> <!-- hace que salga la info de abajo -->
                           <h3 class="content-title"><%= product.description%></h3>
                           <p class="content-text"> ARS $: <%= product.price%> p/p</p>
                           <a href="/lista/<%= product.id%>" style="color: blanchedalmond;">VER DETALLE</a>
                           </div>
                         </a>
-                      </div>
+                  </div>
               
-            <% }) %>
-          </div>
+                <% }) %>
+              </div>
         </div>
       </section>
 
@@ -88,8 +87,19 @@
             
             </div>
         </section>-->
+    
+              <p class="title-pd">PRODUCTOS DESTACADOS</p>
+              <section class="p-destacados">
+                <section><a href= ""><img class= "p-d" src= ""></a></section>
+                <section><a href= ""><img class= "p-d" src= ""></a></section>
+                <section><a href= ""><img class= "p-d" src= ""></a></section>
+       
+              </section>
+
 
       <br>
+
+
 
       <section class="partners" > 
         <div class="partners">
