--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -30,7 +30,9 @@
         </div>    
       </div>
       
-    
+    <div class="menu">
+        <!-- Esta para hacer borde en la derecha noma -->
+    </div>
   </div>
  
       <!-- Slideshow container -->
