--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -5,6 +5,9 @@
           <a href="/"><img src="/images/gif.gif" alt="logo" style="width:15rem; box-shadow: 5px 0px 0px grey; "></a> 
         
       </div>
+
+
+
       <div class="top">
         <div class="header header-right">
           <nav>
@@ -28,10 +31,19 @@
               <a href="/" class="vinculo"> <i class="fas fa-concierge-bell "> </i> Inicio</a>
           </nav>
         </div>    
-      </div>
-      
-    
+      </div>   
   </div>
+
+         <!-- BUSCADOR -->
+  
+       <div class="header header-right">
+           <form action="search" method="GET">
+           <i class="fas fa-search"></i><input type="text" name="search" placeholder="Buscar producto">
+           <button class= btn sm btn-pink-outline>
+            <a href="/">Buscar</a>
+           </button>
+           </form>
+      </div>
  
       <!-- Slideshow container -->
   <div class="slideshow-container" >
