--- a/src/views/products/carrito.ejs
+++ b/src/views/products/carrito.ejs
@@ -51,27 +51,33 @@
         <section class="payment">
             <div class="payment">
                 <div class="superior">
-                    <h2>Pago (solo con tarjeta de credito)</h2>
+                    <h2>PAGÁ TU VIAJE</h2>
+                    <br>
+                    <h2> (Only with credit card)</h2>
                 </div>
-
+                    <br>
                 <form action="Pagar" method="POST">
                     <div class="tarjeta">
-                        <label for="numero-tarj"><i class="fas fa-credit-card"> Numero de tarjeta:</i> </label>
+                        <p>Numero de tarjeta:</p>
+                        <label for="numero-tarj"></label><i class="fas fa-credit-card"></i> </label>
                         <input type="text" name="numero-tarj" id="numero-tarj" placeholder="XXXX XXXX XXXX XXXX">
                     </div>
 
                     <div class="nombre-tarj">
-                        <label for="nombre-tarj"><i class="fas fa-user"></i> Nombre como aparece en la tarjeta:</label>
+                        <p>Nombre como aparece en la tarjeta:</p>
+                        <label for="nombre-tarj"><i class="fas fa-user"></i></label>
                         <input type="text" name="nombre-tarj" id="nombre-tarj" placeholder="">
                     </div>
 
                     <div class="codigo">
-                        <label for="clave"><i class="fas fa-key"></i> Codigo de seguridad:</label>
+                        <p> Codigo de seguridad:</p>
+                        <label for="clave"><i class="fas fa-key"></i></label>
                         <input type="password" name="clave" id="clave" placeholder="">
                 </div>
 
                 <div class="fecha">
-                    <label for="fecha"><i class="fas fa-calendar-alt"></i> Fecha de vencimiento:</label>
+                    <p>Fecha de vencimiento:</p>
+                    <label for="fecha"><i class="fas fa-calendar-alt"></i></label>
                     <input type="date" name="fecha" id="fecha" placeholder="">
                 </div>
 
