--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -35,6 +35,16 @@
       </div>
 
       <section>
+            <!-- BUSCADOR -->
+  
+       <div class="header header-right">
+        <form action="search" method="GET">
+        <i class="fas fa-search"></i><input type="text" name="search" placeholder="Buscar producto">
+        <button class= btn sm btn-pink-outline>
+         <a href="/">Buscar</a>
+        </button>
+        </form>
+   </div>
         <h1 class="color-h3">Estas pueden ser tus proximas aventuras:</h1>
          <br>
            <%- include('partials/cotizacion.ejs') %>
