--- a/src/views/products/crear.ejs
+++ b/src/views/products/crear.ejs
@@ -69,6 +69,19 @@
         <% } %>
     </div>
 
+    <div class="field">
+        <label for="category">Categoría</label>
+            <div class="control">
+                <select name="destacado" id="destacado" required>
+                    <option value="">Seleccione una opción</option>
+                    <option value="SI">Destacado</option>
+                    <option value="NO">No Destacado</option>
+                </select>
+            </div>
+        <p class="feedback"></p>
+    </div>
+
+
         
      <div class="field">
          <div class="control">
