--- a/src/views/admin/edit.ejs
+++ b/src/views/admin/edit.ejs
@@ -34,7 +34,7 @@
         <h3> Foto actual: </h3><img width="15%" src="/images/destinos/<%= product.image %>" alt="">
 <!--  -->
         <div>
-            <input type="file" name="image" id="image" value="<%= product.image %>">
+            <input type="file" name="image" id="image" value="default.png" placeholder="" required>
         </div>
 <!--  -->        
     </div>  
