--- a/src/views/users/detail.ejs
+++ b/src/views/users/detail.ejs
@@ -1,41 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <%- include('../partials/head.ejs') %>
+    <head>
+        <%- include('../partials/head.ejs') %>
+    </head>
+    <body>
+            <header>
+                <%- include('../partials/header.ejs') %>
+            </header>
     
-    
-</head>
-<body>
-    <%- include('../partials/header.ejs') %>
-    <main>
-        <div class="container">
-        <h1> Bienvenido <%= users.first_name %> !</h1>
-        <article class="card">
-            <div class="card-left">
-               <figure>
-                  <img src="/images/users/<%= users.image %>" alt="" >
-                </figure>
-            <h3>#<%= users.id %></h3>
-            </div>
-            <div class="card-content">
-                <h3><%= users.first_name %> <%= users.last_name %></h3>
-                <h3> Pais: <%= users.country %> </h3>
-                <p>Categoría: <%= users.category_id  =="1" ? "Administrador" : "Viajero" %> </p>
-                <p>Email: <a href="mailto:<%= users.email %>" target="_blank"><%= users.email %></a></p>
-                <div>
-                    <a class="button is-warning" href="/edit/<%= users.id %>"> 
-                        <button class="button is-danger">Editar datos </button>
-                    </a>
-                    <form class="form is-inline" action="/edit/<%= users.id %>?_method=delete" method="POST">
-                        <button class="button is-danger">Borrar usuario </button>
-                    </form>
-                </div>
-            </div>    
-        </article>
-    </main>
-
-    <footer>
-    <%- include('../partials/footer.ejs') %>
-    </footer>
-</body>
+            <main>
+                <div class="container">
+                    <h1> Bienvenido <%= users.first_name %> !</h1>
+                        <article class="card">
+                            <div class="card-left">
+                                <figure>
+                                    <img src="/images/users/<%= users.image %>" alt="" >
+                                </figure>
+                            <h3>#<%= users.id %></h3>
+                            </div>
+                            <div class="card-content">
+                                <h3><%= users.first_name %> <%= users.last_name %></h3>
+                                <h3> Pais: <%= users.country %> </h3>
+                                <p>Categoría: <%= users.category_id  =="1" ? "Administrador" : "Viajero" %> </p>
+                                <p>Email: <a href="mailto:<%= users.email %>" target="_blank"><%= users.email %></a></p>
+                                <div>
+                                    <a class="button is-warning" href="/edit/<%= users.id %>"> 
+                                        <button class="button is-danger">Editar datos </button>
+                                    </a>
+                                    
+                                    <form class="form is-inline" action="/edit/<%= users.id %>?_method=delete" method="POST">
+                                        <button class="button is-danger">Borrar usuario </button>
+                                    </form>
+                                </div>
+                            </div>    
+                        </article>
+            </main>
+        <footer>
+        <%- include('../partials/footer.ejs') %>
+        </footer>
+    </body>
 </html>
