--- a/src/views/admin/edit.ejs
+++ b/src/views/admin/edit.ejs
@@ -30,13 +30,13 @@
     </div>
 
     <div class="field">
-        
-        <h3> Foto actual: </h3><img width="15%" src="/images/destinos/<%= product.image %>" alt="">
-<!--  -->
+        <label for="image">Imagen actual</label>
+        <img width="15%" src="/images/destinos/<%= product.image %>">
+
         <div>
-            <input type="file" name="image" id="image" value="default.png" placeholder="" required>
-        </div>
-<!--  -->        
+            <input type="file" name="image" id="image" value="default.png" placeholder="">
+        
+        </div> 
     </div>  
 
     <div class="field">
