--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -33,8 +33,8 @@
           <%- include('partials/cotizacion.ejs') %>
         <hr>
      </section>
-     <div>
-      <h3 style="text-align: center;"> Turisteando es la pagina que estabas buscando para empezar tus vacaciones por Argentina </h3>
+     <div class="texto-barra">
+         <h3> Turisteando es la pagina que estabas buscando para empezar tus vacaciones por Argentina </h3>
      </div>
      
      <!--  <h1 class="color-h3">Estas pueden ser tus proximas aventuras:</h1> -->
