--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="/css/partners.css">
     <link rel="stylesheet" href="/css/seccion.css">
     <link rel="stylesheet" href="/css/dark.css">
+   <!--  <link rel="stylesheet" href="/css/index.css"> -->
 </head>
 
 <body>
@@ -40,7 +41,7 @@
      <!--  <h1 class="color-h3">Estas pueden ser tus proximas aventuras:</h1> -->
 
       <br>
-      <div class="pic-container1"> 
+    <div class="pic-container1"> 
       <!-- barra de busqueda -->
       <section>
         <div class="header header-right">
