--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -5,50 +5,62 @@
 
 	<link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
   <hr>
-  <div class="l-footer">
-    <br>
-   
-  <h1>
-    <img src="/images/gif.gif" alt="logo" style="width: 40%; "> </h1>
-  <p>
-    Copyright - 2021 www.turisteando.com.ar, TODOS LOS DERECHOS RESERVADOS. Las fotos contenidas en este site, el logotipo y las marcas son propiedad de www.turisteando.com.ar y/o de sus respectivos titulares. Está prohibida la reproducción total o parcial, sin la expresa autorización de la administradora de la tienda virtual. Turistando S.A. con domicilio en Calle Falsa 123 - Mendoza – Argentina.   </div>
-  <ul class="r-footer">
-  <li>
-    <h2>
-  Social</h2>
-  <ul class="box"> 
-    <li> <a href="#"><i class="fa fa-facebook"></i></a></li>
-    <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
-    <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-    <li> <a href="#"><i class="fa fa-linkedin"></i></a></li>
-    <li> <a href="#"><i class="fa fa-youtube"></i></a></li>
-  </ul>
-  </li>
-  <li class="features">
-    <h2>
-  Information</h2>
-  <ul class="box h-box">
-  <li><a href="#">Blog</a></li>
-  <li><a href="#">Pricing</a></li>
-  <li><a href="#">Sales</a></li>
+
+
+
+    <div class="l-footer">
+        <br>
+            <div>
+              <h1><img src="/images/gif.gif" alt="logo" style="width: 40%; "> </h1>
+            </div>
+            
+            <div class="text">
+                <p>Copyright - 2021 www.turisteando.com.ar, TODOS LOS DERECHOS RESERVADOS. Las fotos contenidas en este site, el logotipo y las marcas son propiedad de www.turisteando.com.ar y/o de sus respectivos titulares. Está prohibida la reproducción total o parcial, sin la expresa autorización de la administradora de la tienda virtual. Turistando S.A. con domicilio en Calle Falsa 123 - Mendoza – Argentina.</p>
+                <br>
+                <p>Una producción de Florencia Belmaña y Alvaro Sopeña </p>  
+            </div>
+    </div>
   
- 
-  </ul>
-  </li>
-  <li>
-    <h2>
-  Legal</h2>
-  <ul class="box">
-  <li><a href="#">Privacy Policy</a></li>
-  <li><a href="#">Terms of Use</a></li>
-  <li><a href="#">Contract</a></li>
-  </ul>
-  </li>
-  </ul>
-  <div class="b-footer">
-  <p>
+
+
+
+
+<ul class="r-footer">
+          <li>
+              <h2> Social</h2>
+              <ul class="box h-box"> 
+                  <li> <a href="#"><i class="fa fa-facebook"></i></a></li>
+                  <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
+                  <li> <a href="#"><i class="fa fa-instagram"></i></a></li>
+                  <li> <a href="#"><i class="fa fa-linkedin"></i></a></li>
+                  <li> <a href="#"><i class="fa fa-youtube"></i></a></li>
+              </ul>
+          </li>
+
+        <li class="features">
+          <h2>Information</h2>
+          <ul class="box h-box">
+                  <li><a href="#">Blog</a></li>
+                  <li><a href="#">Pricing</a></li>
+                  <li><a href="#">Sales</a></li>
+          </ul>
+        </li>
+
+      <li>
+          <h2>Legal</h2>
+          <ul class="box h-box">
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms of Use</a></li>
+            <li><a href="#">Contract</a></li>
+          </ul>  
+      </li>
+
+
+</ul>
+<!--  <div class="b-footer"> 
+  <p class="text">
   Una producción de Florencia Belmaña y Alvaro Sopeña </p>
-  </div>
+  </div> -->
   </footer>
   
    
